# LocalLink

apps/locallink-apk/: README.md  pubspec.yaml
apps/locallink-apk/android/app/: build.gradle.kts
apps/locallink-apk/android/app/src/main/: AndroidManifest.xml
apps/locallink-apk/android/app/src/main/kotlin/com/locallink/locallink_mobile/: MainActivity.kt
apps/locallink-apk/ios/Runner/: Info.plist
apps/locallink-apk/ios/Runner.xcodeproj/: project.pbxproj
apps/locallink-apk/lib/: config.dart  dns_proxy.dart  home.dart  main.dart  main_dev.dart  registry_client.dart
apps/locallink-apk/linux/: CMakeLists.txt
apps/locallink-apk/linux/runner/: my_application.cc
apps/locallink-apk/macos/Runner.xcodeproj/: project.pbxproj
apps/locallink-apk/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/locallink-apk/macos/Runner/Configs/: AppInfo.xcconfig
apps/locallink-apk/test/: widget_test.dart
apps/locallink-apk/web/: index.html  manifest.json
apps/locallink-apk/windows/: CMakeLists.txt
apps/locallink-apk/windows/runner/: Runner.rc  main.cpp
apps/locallink-cli/: .env.example  Cargo.toml
apps/locallink-cli/src/: config.rs  dns.rs  main.rs  registry.rs
services/locallink-registry/: .env.example  app.py  dev.py  pyproject.toml
services/locallink-registry/src/: __init__.py  config.py  dependencies.py  models.py  router.py  typed_fastapi.py
services/locallink-registry/src/db/: __init__.py  inmemory.py  redis.py
