[package]
name = "locallink-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
get_if_addrs = "0.5.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "time"] }
